# MNISTCustomModel

./: README.md  custom cnn.ipynb  pyproject.toml
