[tool.poetry]
name = "mnistcustommodel"
version = "0.1.0"
description = ""
authors = ["javaclll <yugu.upadhyaya@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
